--- a/M3/zad3/styles.css
+++ b/M3/zad3/styles.css
@@ -1,24 +1,26 @@
 body {
-  font-size: 36px;
-  background: #222;
+  font-size: 72px;
+  background: #313131;
   color: #fff;
   text-align: center;
-  display: flex;
+
+}
+.wrapper {
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-}
-span {
-  display: block;
-}
-.btn {
-  margin: 10px 20px;
-}
-
-.App {
   display: flex;
-  flex-direction: column;
+  width: 100%;
 }
-.timer {
-  margin: 30px 0;
+.btn-lg {
+  font-size: 32px;
+  min-width: 100px;
+}
+.results {
+  margin-left: 5%;
+  font-size: 24px;
+  padding-left: 35px;
+  max-height: 400px;
+  overflow: auto;
+  min-width: 220px;
 }
