--- a/M4/zad4/src/containers/App.css
+++ b/M4/zad4/src/containers/App.css
@@ -1,11 +1,12 @@
 .TodoApp {
-    color: #fff;
+    background-color: #F5F5F5;
+    color: #222;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    align-content: center;
     width: 100vw;
-    min-height: 100vh;
-    background: linear-gradient(120deg, red,blue);
+    height: 100vh;
 }
