--- a/M4/zad4/src/containers/TodoList.css
+++ b/M4/zad4/src/containers/TodoList.css
@@ -1,4 +1,7 @@
 .TodoList {
-    height: 200px;
-    background: orange;
+    background: #b90046;
+    text-transform: uppercase;
+    padding-right: 20px;
+    font-size: 18px;
+    border-radius: 5px;
 }
